--- a/bc-web/src/main/resources/application.yml
+++ b/bc-web/src/main/resources/application.yml
@@ -45,6 +45,10 @@ spring:
       max-lifetime: 1800000
       connection-test-query: SELECT 1
     type: com.zaxxer.hikari.HikariDataSource
+#  cloud:
+#    nacos:
+#      config:
+#        server-addr: 127.0.0.1:8848
 
 eureka:
   client:
